[package]
name = "okkake"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.61"
url = "2.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.8.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
time = { version = "0.3.36", features = ["serde-well-known"] }
shuttle-runtime = "0.45.0"
axum = "0.7.5"
shuttle-axum = "0.45.0"
tokio = "1.38.0"
